# defaults

./: README.md
latex/: aiaa.bbx  beamer_decls.tex  slide_base.tex
latex/common/: declarations.tex  imports.tex
latex/themes/: beamercolorthemepureminimalistic.sty  beamerfontthemepureminimalistic.sty  beamerinnerthemepureminimalistic.sty  beamerouterthemepureminimalistic.sty  beamerthemepureminimalistic.sty
python/: .gitignore  pyproject.toml
