[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project"
version = "0.1.0"
dependencies = []
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
bot = "marketmaker.bot:run_bot"

[tool.setuptools]
packages = ["project"]
